## Process this file with automake to produce Makefile.in 

noinst_LIBRARIES = libmodelview.a
libmodelview_a_SOURCES = Model3D.cpp Model3D.h ModelRenderer.cpp ModelRenderer.h \
  WavefrontLoader.cpp WavefrontLoader.h

INCLUDES = -I$(top_srcdir)/Source_Files/CSeries -I$(top_srcdir)/Source_Files/Misc
