## Process this file with automake to produce Makefile.in 

noinst_LIBRARIES = libmodelview.a
libmodelview_a_SOURCES = Model3D.cpp Model3D.h ModelRenderer.cpp ModelRenderer.h \
  QD3D_Loader.h StudioLoader.cpp StudioLoader.h WavefrontLoader.cpp \
  WavefrontLoader.h Dim3_Loader.h Dim3_Loader.cpp

INCLUDES = -I$(top_srcdir)/Source_Files/CSeries \
  -I$(top_srcdir)/Source_Files/Misc -I$(top_srcdir)/Source_Files/Expat
