## Process this file with automake to produce Makefile.in 

noinst_LIBRARIES = libpfhortran.a
libpfhortran_a_SOURCES = script_instructions.cpp script_instructions.h \
  script_parser.cpp script_parser.h scripting.h scripting.cpp

INCLUDES = -I$(top_srcdir)/Source_Files/CSeries \
  -I$(top_srcdir)/Source_Files/Misc
