## Process this file with automake to produce Makefile.in 

themedir = $(pkgdatadir)/Themes/Default
theme_DATA = theme.mml resources frame_tl.bmp frame_t.bmp frame_tr.bmp \
  frame_l.bmp frame_r.bmp frame_bl.bmp frame_b.bmp frame_br.bmp list_tl.bmp \
  list_t.bmp list_tr.bmp list_l.bmp list_r.bmp list_bl.bmp list_b.bmp \
  list_br.bmp thumb_t.bmp thumb_tc.bmp thumb_c.bmp thumb_bc.bmp thumb_b.bmp \
  slider_l.bmp slider_c.bmp slider_r.bmp slider.bmp button_c.bmp button_l.bmp \
  button_r.bmp

EXTRA_DIST = $(theme_DATA)
