## Process this file with automake to produce Makefile.in 

EXTRA_DIST = \
   16x16/application-x-alephone-fila.png  \
   16x16/application-x-alephone-imga.png  \
   16x16/application-x-alephone-musa.png  \
   16x16/application-x-alephone-phya.png  \
   16x16/application-x-alephone-scea.png  \
   16x16/application-x-alephone-sgaa.png  \
   16x16/application-x-alephone-shpa.png  \
   16x16/application-x-alephone-snda.png  \
   16x16/text-x-alephone-mml.png  \
   22x22/application-x-alephone-fila.png  \
   22x22/application-x-alephone-imga.png  \
   22x22/application-x-alephone-musa.png  \
   22x22/application-x-alephone-phya.png  \
   22x22/application-x-alephone-scea.png  \
   22x22/application-x-alephone-sgaa.png  \
   22x22/application-x-alephone-shpa.png  \
   22x22/application-x-alephone-snda.png  \
   22x22/text-x-alephone-mml.png  \
   24x24/application-x-alephone-fila.png  \
   24x24/application-x-alephone-imga.png  \
   24x24/application-x-alephone-musa.png  \
   24x24/application-x-alephone-phya.png  \
   24x24/application-x-alephone-scea.png  \
   24x24/application-x-alephone-sgaa.png  \
   24x24/application-x-alephone-shpa.png  \
   24x24/application-x-alephone-snda.png  \
   24x24/text-x-alephone-mml.png  \
   256x256/application-x-alephone-fila.png  \
   256x256/application-x-alephone-imga.png  \
   256x256/application-x-alephone-musa.png  \
   256x256/application-x-alephone-phya.png  \
   256x256/application-x-alephone-scea.png  \
   256x256/application-x-alephone-sgaa.png  \
   256x256/application-x-alephone-shpa.png  \
   256x256/application-x-alephone-snda.png  \
   256x256/text-x-alephone-mml.png  \
   32x32/application-x-alephone-fila.png  \
   32x32/application-x-alephone-imga.png  \
   32x32/application-x-alephone-musa.png  \
   32x32/application-x-alephone-phya.png  \
   32x32/application-x-alephone-scea.png  \
   32x32/application-x-alephone-sgaa.png  \
   32x32/application-x-alephone-shpa.png  \
   32x32/application-x-alephone-snda.png  \
   32x32/text-x-alephone-mml.png  \
   48x48/application-x-alephone-fila.png  \
   48x48/application-x-alephone-imga.png  \
   48x48/application-x-alephone-musa.png  \
   48x48/application-x-alephone-phya.png  \
   48x48/application-x-alephone-scea.png  \
   48x48/application-x-alephone-sgaa.png  \
   48x48/application-x-alephone-shpa.png  \
   48x48/application-x-alephone-snda.png  \
   48x48/text-x-alephone-mml.png  \
   64x64/application-x-alephone-fila.png  \
   64x64/application-x-alephone-imga.png  \
   64x64/application-x-alephone-musa.png  \
   64x64/application-x-alephone-phya.png  \
   64x64/application-x-alephone-scea.png  \
   64x64/application-x-alephone-sgaa.png  \
   64x64/application-x-alephone-shpa.png  \
   64x64/application-x-alephone-snda.png  \
   64x64/text-x-alephone-mml.png  \
   96x96/application-x-alephone-fila.png  \
   96x96/application-x-alephone-imga.png  \
   96x96/application-x-alephone-musa.png  \
   96x96/application-x-alephone-phya.png  \
   96x96/application-x-alephone-scea.png  \
   96x96/application-x-alephone-sgaa.png  \
   96x96/application-x-alephone-shpa.png  \
   96x96/application-x-alephone-snda.png  \
   96x96/text-x-alephone-mml.png  \
   128x128/application-x-alephone-fila.png  \
   128x128/application-x-alephone-imga.png  \
   128x128/application-x-alephone-musa.png  \
   128x128/application-x-alephone-phya.png  \
   128x128/application-x-alephone-scea.png  \
   128x128/application-x-alephone-sgaa.png  \
   128x128/application-x-alephone-shpa.png  \
   128x128/application-x-alephone-snda.png  \
   128x128/text-x-alephone-mml.png
