## Process this file with automake to produce Makefile.in 

noinst_LIBRARIES = libmetaserver.a

libmetaserver_a_SOURCES = metaserver_dialogs.h metaserver_messages.h network_metaserver.h metaserver_dialogs.cpp metaserver_messages.cpp network_metaserver.cpp SdlMetaserverClientUi.cpp

AM_CPPFLAGS = -I$(top_srcdir)/Source_Files/CSeries -I$(top_srcdir)/Source_Files/Files -I$(top_srcdir)/Source_Files/GameWorld -I$(top_srcdir)/Source_Files/Misc -I$(top_srcdir)/Source_Files/ModelView -I$(top_srcdir)/Source_Files/Network -I$(top_srcdir)/Source_Files/Network/Metaserver -I$(top_srcdir)/Source_Files/RenderMain -I$(top_srcdir)/Source_Files/RenderOther -I$(top_srcdir)/Source_Files/Sound -I$(top_srcdir)/Source_Files/TCPMess -I$(top_srcdir)/Source_Files/XML -I$(top_srcdir)/Source_Files
